# automation-revenger-games

./: .gitignore  Makefile  README.md  pyproject.toml
output/: matches_last_screenshot.json
src/: main.py
src/actions/: game_actions.py
src/cli/: prompts.py
src/config/: __init__.py  dev.json  entities.py  metadata.json  metadata.py  production.json  sandbox.json
src/core/: browser_capture.py  browser_manager.py  process_screenshot.py  request_interceptor.py
src/utils/: csv_logger.py  db_utils.py  http_utils.py  logger.py  mapping_utils.py  metadata_utils.py  opencv_utils.py  paths.py  response_tracker.py  sleep.py  statistics.py
